--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
+    "egg": "^2.21.1",
     "eslint": "5.12.0",
     "eslint-config-react-app": "^3.0.8",
     "eslint-loader": "2.1.1",
@@ -53,7 +54,7 @@
     "workbox-webpack-plugin": "3.6.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "node scripts/start.js ",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
@@ -115,5 +116,8 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "egg-bin": "^4.13.0"
   }
 }
