--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "file-loader": "2.0.0",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
+    "http-proxy-middleware": "^0.19.1",
     "identity-obj-proxy": "3.0.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "23.6.0",
